[package]
name = "is31fl3743b"
version = "0.1.2"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Bare-metal no_std driver for the Lumissil IS31FL3743B"
repository = "https://github.com/kiibohd/kiibohd-core"
keywords = ["no-std", "embedded", "hardware-support"]
categories = ["embedded", "no-std"]

[dependencies]
defmt        = "0.3"
embedded-hal = "0.2.7"
heapless     = { version = "0.7", features = ["defmt-impl"] }
nb           = "1.0.0"
