[package]
name = "kiibohd-hall-effect-keyscanning"
version = "0.1.2"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Hall Effect keyscanning for strobed matrices"
repository = "https://github.com/kiibohd/kiibohd-core"
keywords = ["no-std", "embedded", "keyboard", "hardware-support"]
categories = ["embedded", "no-std"]

[dependencies]
kiibohd-hall-effect = { version = "^0.1.2", path = "../kiibohd-hall-effect" }
kiibohd-keyscanning = { version = "^0.1.2", path = "../kiibohd-keyscanning", optional = true }
kll-core            = { version = "^0.1.5", path = "../kll-core", optional = true }
generic-array       = "0.14.4"
embedded-hal        = "0.2.7"
heapless            = "0.7.14"

[features]
kll-core = ["kiibohd-hall-effect/kll-core", "kiibohd-keyscanning?/kll-core", "dep:kll-core", "dep:kiibohd-keyscanning"]

defmt = ["kiibohd-hall-effect/defmt", "kll-core?/defmt", "kiibohd-keyscanning?/defmt"]
