[package]
name          = "kiibohd-hall-effect"
version       = "0.1.1"
authors       = ["Jacob Alexander <haata@kiibohd.com>"]
license       = "MIT OR Apache-2.0"
edition       = "2021"
repository    = "https://github.com/kiibohd/kiibohd-core"
description   = "Analysis crate for intepreting hall-effect keyboard switches (e.g. Silo Switches)"
keywords      = ["no-std", "usb", "hid", "embedded", "keyboard"]
categories    = ["embedded", "no-std", "hardware-support"]


[lib]
name = "kiibohd_hall_effect"


[features]
default = []

# Defmt logging disabled by default
defmt = ["dep:defmt", "heapless/defmt-impl", "kll-core?/defmt"]

# Used to convert to TriggerEvents
kll-core = ["dep:kll-core"]


[dependencies]
defmt    = { version = "0.3", optional = true }
heapless = { version = "^0.7.10" }
kll-core = { version = "0.1", path = "../kll-core", optional = true }
log      = { version = "^0.4", default-features = false }
typenum  = { version = "^1.12", features = ["no_std"] }


[dev-dependencies]
flexi_logger    = "^0.16"
