[package]
name          = "kiibohd-hid-io"
version       = "0.1.2"
authors       = ["Jacob Alexander <haata@kiibohd.com>"]
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/kiibohd/kiibohd-core"
categories    = ["embedded", "no-std"]
description   = """
HID-IO protocol implementation for the C kiibohd firmware.
"""
keywords = ["no-std", "usb", "hid", "embedded", "keyboard"]

edition = "2021"

[dependencies]
defmt           = { version = "0.3", optional = true }
heapless        = { version = "0.7.14" }
hid-io-protocol = { version = "0.1.4", default-features = false, features = ["device"] }
kll-core        = { version = "^0.1.5", path = "../kll-core" }
log             = { version = "0.4", default-features = false }
pkg-version     = { version = "^1.0" }

[features]
defmt = ["dep:defmt", "heapless/defmt-impl", "hid-io-protocol/defmt", "kll-core/defmt"]
