[package]
name = "kiibohd-keyscanning"
version = "0.1.3"
authors = ["Zion Koyl <hiszd1@gmail.com>", "Jacob Alexander <haata@kiibohd.com>"]
description = "Kiibohd gpio keyscanning module for momentary push button switches (keyboards)"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/kiibohd/kiibohd-core"
keywords = ["no-std", "usb", "hid", "embedded", "keyboard"]
categories = ["embedded", "no-std", "hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt           = { version = "0.3", optional = true }
embedded-hal    = { version = "0.2.7", features = ["unproven"] }
heapless        = { version = "0.7", optional = true }
kll-core        = { version = "^0.1.7", path = "../kll-core", optional = true }

[features]

default = []

# Used to convert KeyState to TriggerEvent
kll-core = ["dep:kll-core", "dep:heapless", "defmt"]

defmt = ["dep:defmt", "kll-core?/defmt"]
