[package]
name = "kiibohd-usb"
version = "0.1.1"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
edition = "2021"
description = "Kiibohd USB HID Interface"
keywords = ["usb", "hid", "embedded", "nkro", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kiibohd/kiibohd-core"

[dependencies]
defmt = { version = "0.3", optional = true }
heapless = { version = "^0.7.10" }
kiibohd-hid-io = { version = "0.1.0", path = "../kiibohd-hid-io", optional = true }
kll-core = { version = "0.1", path = "../kll-core", optional = true }
log = { version = "^0.4", default-features = false }
usb-device = { version = "0.2.8", git = "https://github.com/haata/usb-device.git" }
usbd-hid = { version = "0.6.0", git = "https://github.com/haata/usbd-hid.git" }

[dev-dependencies]
libc-print = "0.1.16"


[features]
default = ["hidio", "mouse"]

# HID-IO Support can be disabled
hidio = ["kiibohd-hid-io"]

# Mouse Support can be disabled
mouse = []

# defmt support
defmt = ["dep:defmt", "heapless/defmt-impl", "kiibohd-hid-io?/defmt", "kll-core?/defmt"]
# TODO: Waiting for the next version of usb-device to enable the feature
#defmt = ["dep:defmt", "heapless/defmt-impl", "kiibohd-hid-io?/defmt", "kll-core?/defmt", "usb-device/defmt", "usbd-hid/defmt-impl"]

# kll-core Capability Event enqueuing support
kll-core = ["dep:kll-core"]
