[package]
name = "kiibohd-usb"
version = "0.1.5"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
edition = "2021"
description = "Kiibohd USB HID Interface"
keywords = ["usb", "hid", "embedded", "nkro", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kiibohd/kiibohd-core"

[dependencies]
defmt = { version = "0.3", optional = true }
heapless = { version = "0.7" }
kiibohd-hid-io = { version = "^0.1.4", path = "../kiibohd-hid-io", optional = true }
kll-core = { version = "^0.1.7", path = "../kll-core", optional = true }
log = { version = "^0.4", default-features = false }
usb-device = { version = "0.2.9" }
usbd-hid = { version = "0.6.1" }

[dev-dependencies]
# NOTE: Enable this is you need to debug unit tests further
#       cargo doesn't have a way to optionally enable dev-dependencies currently
#libc-print = "0.1.16"


[features]
default = ["hidio", "mouse"]

# HID-IO Support can be disabled
hidio = ["kiibohd-hid-io"]

# Mouse Support can be disabled (requires a larger control buffer)
mouse = ["usb-device/control-buffer-256"]

# defmt support
defmt = ["dep:defmt", "heapless/defmt-impl", "kiibohd-hid-io?/defmt", "kll-core?/defmt", "usb-device/defmt", "usbd-hid/defmt"]

# kll-core Capability Event enqueuing support
kll-core = ["dep:kll-core"]
