[package]
name = "kll-core"
version = "0.1.8"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "KLL state-machine implementation focused on no_std embedded/bare-metal targets"
repository = "https://github.com/kiibohd/kiibohd-core"
keywords = ["no-std", "embedded", "keyboard"]
categories = ["embedded", "no-std"]

[features]
default = []

# Defmt logging disabled by default
defmt = ["dep:defmt", "heapless/defmt-impl", "kll-hid/defmt"]

[dependencies]
byteorder             = { version = "1.4", default-features = false }
defmt                 = { version = "0.3", optional = true }
enum-primitive-derive = "0.2.2"
heapless              = "0.7"
kll-hid               = { version = "^0.1.2", path = "../kll-hid" }
kll-macros            = { version = "^0.1.2", path = "../kll-macros" }
log                   = { version = "^0.4", default-features = false }
num-traits            = { version = "0.2", default-features = false }
static_assertions     = "1.1"

[dev-dependencies]
flexi_logger  = "0.25"
